--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body {
 	background-color: rgba(3, 201, 169, 0.3);
 }
 #board {
-	width: 600px;
-	height: 600px;
+	width: 450px;
+	height: 450px;
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
@@ -18,8 +18,8 @@ body {
 	
 }
 #board div {
-	width: 60px;
-	height: 60px;
+	width: 45px;
+	height: 45px;
 	border: 1px solid transparent;
 	display: inline-block;
 	float: left;
@@ -34,21 +34,93 @@ body {
 .coin {
 	background-image: url(../images/coin.png);
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 }
 #score {
-	font-size: 2em;
+	font-size: 1.5em;
 	text-align: center;
 	margin-top: 1%;
 	margin-bottom: 1%;
-	color: #333;
+	color: white;
+	text-shadow: 3px 3px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 .hidden {
 	display: none;
 }
 .gameOver {
-	margin-top: 15%;
+	margin-top: 10%;
 	text-align: center;
-	font-size: 5em;
-	color: #333;
+	font-size: 4em;
+	color: white;
+	text-shadow: 6px 5px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+}
+.title {
+	margin-top: 5%;
+	text-align: center;
+	font-size: 4.4em;
+	font-weight: 900;
+	color: white;
+	text-shadow: 6px 5px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+}
+#avatarContainer {
+	background-image: url(../images/furry.png);
+	width: 300px;
+	height: 300px;
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	position: relative;
+	float: left;
+	margin-left: 10%;
+	top: 70%;
+	margin-right: 3%;
+}
+#avatarContainer:hover {
+	transition: all 0.1s linear 0s;
+	-webkit-filter: grayscale(30%);
+    filter: grayscale(30%);
+}
+#avatarContainer:active {
+	transition: all 0.1s linear 0s;
+	width: 302px;
+	height: 302px;
+}
+.startGameInfo {
+	margin-top: 40px;
+	font-size: 1.2em;
+	color: white;
+	text-shadow: 3px 2px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+}
+.startGameInfo span {
+	font-weight: 900;
+}
+.naviInfo {
+	color: white;
+	text-shadow: 3px 2px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+	margin-bottom: 70px;
+	font-size: 1.2em;
+}
+.naviInfo span {
+/*
+	color: white;
+	text-shadow: 4px 3px #666;
+*/
+	font-size: 1.9em;
+	font-weight: 900;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+}
+.info {
+	font-size: 0.6em;
+	color: white;
+	text-shadow: 2px 1px black;
+	font-family: 'Press Start 2P', Verdana, sans-serif;
+	position: relative;
+	margin-top: 90px;
+	margin-right: 1%;
+	float: right;
 }
