--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body {
 	background-color: rgba(3, 201, 169, 0.3);
 }
 #board {
-	width: 450px;
-	height: 450px;
+	width: 650px;
+	height: 650px;
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
@@ -18,8 +18,8 @@ body {
 	
 }
 #board div {
-	width: 45px;
-	height: 45px;
+	width: 65px;
+	height: 65px;
 	border: 1px solid transparent;
 	display: inline-block;
 	float: left;
@@ -37,12 +37,12 @@ body {
 	background-size: cover;
 }
 #score {
-	font-size: 1.5em;
+	font-size: 3em;
 	text-align: center;
 	margin-top: 1%;
 	margin-bottom: 1%;
 	color: white;
-	text-shadow: 3px 3px black;
+	text-shadow: 6px 6px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 .hidden {
@@ -51,18 +51,18 @@ body {
 .gameOver {
 	margin-top: 10%;
 	text-align: center;
-	font-size: 4em;
+	font-size: 8em;
 	color: white;
-	text-shadow: 6px 5px black;
+	text-shadow: 12px 10px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 .title {
-	margin-top: 5%;
+	margin-top: 7%;
 	text-align: center;
-	font-size: 4.4em;
+	font-size: 8em;
 	font-weight: 900;
 	color: white;
-	text-shadow: 6px 5px black;
+	text-shadow: 12px 10px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 #avatarContainer {
@@ -75,7 +75,7 @@ body {
 	position: relative;
 	float: left;
 	margin-left: 10%;
-	top: 70%;
+	top: 80%;
 	margin-right: 3%;
 }
 #avatarContainer:hover {
@@ -88,8 +88,15 @@ body {
 	width: 302px;
 	height: 302px;
 }
+.paragraphsContainer {
+	position: relative;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
 .startGameInfo {
-	margin-top: 40px;
+	margin-top: 80px;
 	font-size: 1.2em;
 	color: white;
 	text-shadow: 3px 2px black;
