--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,17 @@ body {
 	display: none;
 }
 .gameOver {
-	margin-top: 15%;
+	margin-top: 6%;
 	text-align: center;
-	font-size: 15em;
+	font-size: 8em;
 	color: white;
 	text-shadow: 12px 10px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
+}
+#startGame {
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 }
 .title {
 	margin-top: 7%;
@@ -67,16 +72,16 @@ body {
 }
 #avatarContainer {
 	background-image: url(../images/furry.png);
-	width: 300px;
-	height: 300px;
+	width: 500px;
+	height: 500px;
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
 	position: relative;
 	float: left;
-	margin-left: 10%;
-	top: 80%;
-	margin-right: 3%;
+	margin-left: 50px;
+	margin-right: 50px;
+	z-index: 2;
 }
 #avatarContainer:hover {
 	transition: all 0.1s linear 0s;
@@ -85,8 +90,8 @@ body {
 }
 #avatarContainer:active {
 	transition: all 0.1s linear 0s;
-	width: 302px;
-	height: 302px;
+	width: 503px;
+	height: 503px;
 }
 .paragraphsContainer {
 	position: relative;
@@ -97,7 +102,7 @@ body {
 }
 .startGameInfo {
 	margin-top: 80px;
-	font-size: 1.2em;
+	font-size: 2em;
 	color: white;
 	text-shadow: 3px 2px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
@@ -110,19 +115,15 @@ body {
 	text-shadow: 3px 2px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 	margin-bottom: 70px;
-	font-size: 1.2em;
+	font-size: 2em;
 }
 .naviInfo span {
-/*
-	color: white;
-	text-shadow: 4px 3px #666;
-*/
 	font-size: 1.9em;
 	font-weight: 900;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 .info {
-	font-size: 0.6em;
+	font-size: 1em;
 	color: white;
 	text-shadow: 2px 1px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
