--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 	font-size: 3em;
 	text-align: center;
 	margin-top: 1%;
-	margin-bottom: 1%;
+	margin-bottom: 0;
 	color: white;
 	text-shadow: 6px 6px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
@@ -62,7 +62,7 @@ body {
 	margin-right: auto;
 }
 .title {
-	margin-top: 7%;
+	margin-top: 5%;
 	text-align: center;
 	font-size: 8em;
 	font-weight: 900;
@@ -128,7 +128,7 @@ body {
 	text-shadow: 2px 1px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
 	position: relative;
-	margin-top: 90px;
+	margin-top: 6%;
 	margin-right: 1%;
 	float: right;
 }
