--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-	background-color: rgba(3, 201, 169, 0.3);
+	background-color: rgba(3, 201, 169, 0.4);
 }
 #board {
 	width: 650px;
@@ -49,7 +49,7 @@ body {
 	display: none;
 }
 .gameOver {
-	margin-top: 6%;
+	margin-top: 10vh;
 	text-align: center;
 	font-size: 8em;
 	color: white;
@@ -58,10 +58,13 @@ body {
 }
 #startGame {
 	position: relative;
+	width: 94vw;
+	height: 20vh;
 	margin-left: auto;
 	margin-right: auto;
 }
 .title {
+	width: 
 	margin-top: 5%;
 	text-align: center;
 	font-size: 8em;
@@ -72,15 +75,15 @@ body {
 }
 #avatarContainer {
 	background-image: url(../images/furry.png);
-	width: 500px;
-	height: 500px;
+	width: 30vw;
+	height: 55vh;
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
 	position: relative;
 	float: left;
-	margin-left: 70px;
-	margin-right: 50px;
+	margin-left: 6vw;
+	margin-right: 2vw;
 	z-index: 2;
 }
 #avatarContainer:hover {
@@ -90,45 +93,46 @@ body {
 }
 #avatarContainer:active {
 	transition: all 0.1s linear 0s;
-	width: 503px;
-	height: 503px;
+	width: 31vw;
+	height: 57vh;
 }
-.paragraphsContainer {
+.infoContainer {
+	height: 55vh;
+	width: 94vw;
 	position: relative;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
 }
-.startGameInfo {
-	margin-top: 80px;
-	font-size: 2em;
-	color: white;
-	text-shadow: 3px 2px black;
-	font-family: 'Press Start 2P', Verdana, sans-serif;
-}
-.startGameInfo span {
+.arrows {
 	font-weight: 900;
+	font-size: 2em;
 }
 .naviInfo {
 	color: white;
-	text-shadow: 3px 2px black;
+	text-shadow: 4px 3px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
-	margin-bottom: 70px;
-	font-size: 2em;
+	margin-right: 6vw;
+	font-size: 1.8em;
+	line-height: 2em;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	display: inline-block;
+	
+	
 }
 .naviInfo span {
-	font-size: 1.9em;
 	font-weight: 900;
-	font-family: 'Press Start 2P', Verdana, sans-serif;
+	text-transform: capitalize;
+}
+.naviinfo p {
+	vertical-align: middle;
 }
 .info {
 	font-size: 1em;
 	color: white;
 	text-shadow: 2px 1px black;
 	font-family: 'Press Start 2P', Verdana, sans-serif;
-	position: relative;
-	margin-top: 6%;
-	margin-right: 1%;
-	float: right;
+	top: 96vh;
+	margin-right: 1vw;
+	display: block;
+	position: fixed;
 }
